--- a/Episode 4 - Talk is cheap, show me the code/index.html
+++ b/Episode 4 - Talk is cheap, show me the code/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Episode 1</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;1,100;1,400;1,500;1,600&family=Lora:ital,wght@1,400;1,500;1,600&family=Poppins:wght@400;500;600;700&family=Roboto+Slab:wght@300;400&family=Ubuntu:wght@400;500;700&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Varela&family=Varela+Round&family=Work+Sans:wght@300&display=swap");
+    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="root">Not Rendered</div>
